# Simulation-de-l-atterrissage-d-un-avion

./: Class.py  Extra_function.py  LICENSE.md  README.md  functions.py  main.py  pyproject.toml  quebec_airports_map.html  requirements.txt  streamlit_app.py
Ressources/: data_avions.csv
affichages_graphiques/: __init__.py  freinage.py  trajectoire.py
choix_utilisateur/: __init__.py  choisir_avion.py  choisir_piste.py  choisir_type_avion.py  code_aeroport_valide.py  get_float_input.py
classes/: __init__.py
classes/aeroports/: __init__.py  aeroport.py  carte_quebec.py  fonctions_aeroport.py  piste.py  quebec_airports_map.html
classes/avions/: __init__.py  avion.py  choix_avion.py  commercial.py  fonction_avion.py  militaire.py
classes/meteos/: Streamlit.py  fonctions_meteo.py  meteo.py
redirection_aeroport/: __init__.py  calcul_distance_aeroport.py  compare.py  trouver_aeroport_proche.py
simulation_atterrissage/: main.py
simulation_atterrissage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
simulation_atterrissage/Ressources/: data_avions.csv
simulation_atterrissage/affichages_graphiques/: freinage.py  trajectoire.py
simulation_atterrissage/choix_utilisateur/: choisir_avion.py  get_float_input.py
simulation_atterrissage/classes/: __init__.py
source/: affichages_graphiques.rst  choix_utilisateur.rst  classes.aeroports.rst  classes.avions.rst  classes.meteos.rst  classes.rst  conf.py  index.rst  installation.rst  introduction.rst  modules.rst  redirection_aeroport.rst
test/: test_avion.py  test_simulation.py
(+17 files in other folders)
