[project]
name = "simulation-atterrissage"
version = "0.1.0"
description = "Simulation d'atterrissage d'un avion avec visualisation cartographique"
authors = [
    { name = "Loranchet Pierrick" },
    { name = "Berteaud Kilian" },
    { name = "Chenuet Alexis" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "folium>=0.12.0",
    "matplotlib>=3.4.0",
    "requests>=2.26.0",
    "streamlit-folium>=0.13",
    "urllib3>=2.4.0"
]

[tool.setuptools]
packages = ["simulation_atterrissage"]

[project.scripts]
simulation-atterrissage = "main:main"

[project.urls]
"Homepage" = "https://github.com/kberteaud37/Simulation-de-l-atterrissage-d-un-avion"
"Repository" = "https://github.com/kberteaud37/Simulation-de-l-atterrissage-d-un-avion"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
